# predictive-cache

./: CMakeLists.txt  README.md
benchmarks/: bm_cache.cpp
include/: CountMinSketch.hpp  LFUCache.hpp  LRUCache.hpp  MarkovPredictor.hpp  PredictiveShardedCache.hpp  ShardedLRU.hpp  ShardedWTinyLFU.hpp  TinyLFUAdmittingLRU.hpp
src/: bench.cpp  main.cpp
